--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>You need to enable JavaScript to run this application.</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
